src/styles.scss
@import "src/styles/colors";

html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

.page-container{
  background-color: $background-dark;
  position: fixed;
  width: 100vw;
  height: 100vh;
}

//Navigation Dialog SCSS - Needs to be in root
.full-screen-dialog{
  max-width: 100vw !important;
  box-sizing: border-box;
  overflow: hidden;
  display: flex;
}

.full-screen-dialog .mat-dialog-container{
  border-radius: 0;
  width:100vw;
  height:100vh;
  margin:0;
  padding: 10%;
  overflow: hidden;
  color: $text_bright;
  background: $black;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 24px;
}

.mat-dialog-actions{
  justify-content: center;
}

//Input Dialog SCSS - Needs to be in root
.input-dialog{
}

.input-dialog .mat-dialog-container{
  border-radius: 20px;
  background: $background-dark;
  color: $text_bright;
}


::-webkit-scrollbar {
  width: 4px;
  overflow-y: scroll;
  background: $background-dark;
}

::-webkit-scrollbar-thumb {
  margin-top: 10px;
  margin-bottom: 10px;
  background: $contrast;
  border-radius: 10px;
}

